# archodex-backend

./: .actrc  .gitignore  Cargo.toml  Dockerfile  archodex.http  samconfig.toml  template.yaml
.cargo/: config.toml
.devcontainer/: devcontainer.json  init.sh
.devcontainer/k8s/: 00_backend_persistent_volume_claim.yaml  00_dynamodb_persistent_volume_claim.yaml  10_pod.yaml
.github/workflows/: build-dev.yml  deploy.yml
archodex-com/: Cargo.toml  build.rs
archodex-error/src/: lib.rs
lambda/: Cargo.toml
lambda/src/: main.rs
migrator/: Cargo.toml
migrator/src/: accounts.surql  lib.rs  main.rs  resources.surql
server/: Cargo.toml
server/src/: main.rs
src/: account.rs  accounts.rs  auth.rs  cognito.rs  db.rs  env.rs  error.rs  event.rs  lib.rs  oauth2.rs  principal_chain.rs  query.rs  report.rs  report_api_key.rs  report_api_keys.rs  report_key.rs  report_keys.rs  resource.rs  resources.rs  router.rs  signup.rs  surrealdb_deserializers.rs  user.rs  value.rs
