[workspace]
members = ["server", "lambda", "migrator"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.7.7", default-features = false, features = ["http1", "http2", "json", "macros", "tokio", "tower-log", "tracing"] }
surrealdb = { version = "2", default-features = false, features = ["kv-dynamodb", "rustls"] }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }

[package]
name = "archodex-backend"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.89"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.30.0", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1.6.1"
aws-smithy-types = "1.1.10"
axum.workspace = true
axum-macros = "0.4.1"
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
hex = { version = "0.4.3", features = ["serde"] }
migrator = { path = "migrator" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
surrealdb.workspace = true
tokio.workspace = true
tower = { version = "0.5.1", default-features = false }
tower-http = { version = "0.5.2", default-features = false, features = ["trace"] }
tracing.workspace = true

[patch.crates-io]
surrealdb = { git = "https://github.com/txase/surrealdb.git" }
